corrected 3rd party notice in our interfaces

--- a/resources/css/wappointment-admin.css
+++ b/resources/css/wappointment-admin.css
@@ -1,4 +1,7 @@
-#wpbody-content > .error, #wpbody-content > .notice-warning {
+#wpbody-content > .error, 
+#wpbody-content > .notice-warning, 
+#wpbody-content > .notice-success,
+#wpbody-content > .updated {
     display:none;
 }
 .wappointment-wrap .form-control::placeholder {
