--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -56,6 +56,7 @@
     text-align: center;
     padding: .4rem;
     border-radius: .8rem;
+    margin-right: 1rem;
 }
 .field-wrap .btn.btn-secondary.btn-cell {
     margin-right: 1rem;
