--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -93,7 +93,14 @@
     width: 100%;
 }
 
-
+.widefat .wappointment-wrap  tfoot td input[type="checkbox"]::before, 
+.widefat .wappointment-wrap  th input[type="checkbox"]::before, 
+.widefat .wappointment-wrap  thead td input[type="checkbox"]::before, 
+.wappointment-wrap input[type="checkbox"]:checked::before {
+    width: 1.375rem;
+    height: 1.375rem;
+    margin: -.1875rem -.3125rem;
+}
 .widefat .wappointment-wrap tfoot td input[type="checkbox"]::before, 
 .widefat .wappointment-wrap th input[type="checkbox"]::before, 
 .widefat .wappointment-wrap thead td input[type="checkbox"]::before, 
@@ -107,14 +114,17 @@
     .btn.disabled {
         cursor: not-allowed;
     }
-
-    
-    input[type="checkbox"], input[type="radio"]{
-        width: auto;
-        min-height: 16px;
-        min-width: 16px;
-        max-height: 16px;
+    input[type="checkbox"], input[type="radio"] {
+        height: 1.175rem;
+        width: 1.175rem;
     }
+    
+/*     input[type="checkbox"], input[type="radio"]{
+        width: auto;
+        min-height: 1.3125rem;
+        min-width: 1.3125rem;
+        max-height: 1.3125rem;
+    } */
     select {
         max-height: 36px;
         font-size: 16px;
