--- a/resources/css/wappointment-admin.css
+++ b/resources/css/wappointment-admin.css
@@ -8,3 +8,9 @@
     color: #dadada;
     opacity: 1;
 }
+
+.wappointment-wrap .form-control {
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+}
