--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -58,6 +58,9 @@
     border-radius: .8rem;
     cursor:pointer;
     margin: 0 .5rem;
+}
+
+.check-locations .btn.btn-secondary.btn-cell {
     width: 130px;
 }
 
