wap modal added new parameter

--- a/resources/js/Plugins/vue-wap-modal/styles.css
+++ b/resources/js/Plugins/vue-wap-modal/styles.css
@@ -57,6 +57,13 @@
     border-radius: 2rem;
   }
 
+  .wapmodal-content.screenshot.right {
+    max-width: 1150px;
+    width: auto;
+    height: auto;
+    max-height: 100%;
+  }
+
   @media only screen and (max-width: 600px) {
     .wapmodal-content.standard{
       width: 100%;
