removed unneed scroll bar in modals

--- a/resources/js/Plugins/vue-wap-modal/styles.css
+++ b/resources/js/Plugins/vue-wap-modal/styles.css
@@ -98,7 +98,7 @@
       padding: 1rem;
       overflow: auto;
       background-color: #fff;
-      overflow: scroll;
+      /* overflow: scroll; */
       height: 80%;
   }
 
