latest refactoring frontend widget

--- a/resources/scss/_variablesNew.scss
+++ b/resources/scss/_variablesNew.scss
@@ -39,7 +39,7 @@ $grays: map-merge(
 $blue:    #6664cb !default;
 $purple:  #6664cb !default;
 $red:     #ed7575 !default;
-$green:   #66c677 !default;
+$green:   #82ca9c !default;
 $indigo:  #6610f2 !default;
 $pink:    #e83e8c !default;
 $orange:  #fd7e14 !default;
