--- a/resources/css/closable.css
+++ b/resources/css/closable.css
@@ -1,28 +1,28 @@
-.closable .close{
+.wclosable .wclose{
     width: 15px;
     display: inline-block;
     height: 15px;
     position: relative;
     margin-left: .4em;
 }
-.closable .close::after {
+.wclosable .wclose::after {
     transform: translateX(15px) rotate(-45deg);
 }
-.closable .close::before, .closable .close::after {
+.wclosable .wclose::before, .wclosable .wclose::after {
     content: ' ';
     position: absolute;
     background-color: #fff;
 }
-.closable .close::before {
+.wclosable .wclose::before {
     transform: translateX(15px) rotate(45deg);
 }
-.closable .close:hover::before, .closable .close:hover::after {
+.wclosable .wclose:hover::before, .wclosable .wclose:hover::after {
     background-color: #575656;
     width: 2px;
 }
 
 
-.closable .close::before, .closable .close::after  {
+.wclosable .wclose::before, .wclosable .wclose::after  {
     height: 10px;
     width: 1px;
     top: 3px;
