--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -25,9 +25,9 @@
  @import "~bootstrap/scss/nav";
  /* @import "~bootstrap/scss/navbar";
  @import "~bootstrap/scss/card";
-@import "~bootstrap/scss/breadcrumb";
+@import "~bootstrap/scss/breadcrumb";*/
  @import "~bootstrap/scss/pagination";
- @import "~bootstrap/scss/badge";
+ /*@import "~bootstrap/scss/badge";
  @import "~bootstrap/scss/jumbotron";
  @import "~bootstrap/scss/alert"; */
  @import "~bootstrap/scss/progress";
