--- a/resources/js/Plugins/vue-wap-modal/styles.css
+++ b/resources/js/Plugins/vue-wap-modal/styles.css
@@ -85,13 +85,14 @@
   
   .wapmodal .wapmodal-header {
     padding: 2px 32px;
-    background-color: #dbdbdb;
+    background-color: #bbb9b9;
     color: #4d4d4d;
   }
   .wapmodal .wapmodal-header .modal-title {
     text-align: center;
     margin: .6rem 0;
-    color: #4d4d4d;
+    color: #fff;
+    font-weight: bold;
   }
   
   .wapmodal .wapmodal-body {
