fixed regav cleaning issue

--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -209,7 +209,7 @@
     .nav-tabs .nav-link.active{
         cursor: default;
         color:#595555;
-        background-color:#e3e3e3;
+        background-color:#f4f4f4;
     }
 
     .bwe-tabs .nav-tabs .nav-link.active{
