added google meet

--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -54,7 +54,7 @@
 }
 .btn.btn-secondary.selected,
 .wbtn.wbtn-secondary.selected {
-    background-color: #666;
+    background-color: var(--primary);
     color: #fff;
 }
 
