--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -204,8 +204,8 @@
     }
     .nav-tabs .nav-item.show .nav-link, 
     .nav-tabs .nav-link.active{
-        border: 2px solid var(--primary);
-        border-bottom: 1px solid #e3e3e3;
+        border: 2px solid #e1e1e1;
+        border-bottom: none;
     }
     .nav-tabs .nav-link:focus{
         box-shadow: none;
@@ -218,7 +218,7 @@
     }
 
     .nav-tabs .nav-link {
-        border-bottom: 1px solid #e3e3e3;
+        border-bottom: none;
         color:#595959;
     }
     .nav-tabs .nav-link:hover {
