--- a/resources/css/wappointment-admin.css
+++ b/resources/css/wappointment-admin.css
@@ -2,7 +2,7 @@
 #wpbody-content > .notice-warning, 
 #wpbody-content > .notice-success,
 #wpbody-content > .updated, 
-#wpbody-content > .notice
+#wpbody-content > .notice,
 #wpbody-content > .announcements-notices {
     display:none !important;
 }
