--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -153,10 +153,9 @@
 .table thead th{
     vertical-align: bottom;
     border-bottom: 2px solid #dee2e6;
-    font-weight: normal;
     font-style: italic;
     font-size: .9rem;
-    color: #bbb;
+    color: #737373;
     border-top: none;
 }
 
