fixed calendars settings width + modal

--- a/resources/js/Plugins/vue-wap-modal/styles.css
+++ b/resources/js/Plugins/vue-wap-modal/styles.css
@@ -15,6 +15,7 @@
   .wapmodal .wapmodal-body-wrapper{
     width: 90%;
     margin: 1rem auto;
+    min-height: 200px;
   }
 
   .wapmodal.wapmodal-show{
