added client permissions

--- a/resources/js/Plugins/vue-wap-modal/styles.css
+++ b/resources/js/Plugins/vue-wap-modal/styles.css
@@ -15,7 +15,6 @@
   .wapmodal .wapmodal-body-wrapper{
     width: 90%;
     margin: 1rem auto;
-    min-height: 200px;
   }
 
   .wapmodal.wapmodal-show{
@@ -43,10 +42,9 @@
     margin-right:0;
   }
 
-/*   .wapmodal-content.standard.noscroll {
-    overflow: unset !important;
-    border-radius: 0 0 0 0;
-  } */
+   .wapmodal-content.standard.noscroll {
+    min-height: 200px;
+  } 
 
   .wapmodal-content.screenshot {
     position: absolute;
