--- a/resources/scss/_tooltips.scss
+++ b/resources/scss/_tooltips.scss
@@ -53,6 +53,7 @@
 
 .tt-lg[data-tt]::before{
   min-width: 300px;
+  text-align: left;
 }
 .tt-lg[data-tt]::before,
 .tt-lg[data-tt]::after{
@@ -95,11 +96,11 @@
 
 .tt-success[data-tt]::before {
   background-color: rgba(83, 168, 65, 0.8);
-  content: '\2714 ' attr(data-tt);
+  content: '\2714  ' attr(data-tt);
 }
 .tt-disabled[data-tt]::before {
   background-color: rgba(144, 144, 159, 0.8);
-  content: '\2716 ' attr(data-tt);
+  content: '\2716  ' attr(data-tt);
 }
 
 .tt-disabled img {
