--- a/resources/scss/bootstrap.scss
+++ b/resources/scss/bootstrap.scss
@@ -130,6 +130,9 @@
 .w-100{
     width: 100%;
 }
+.w-50{
+    width: 50%;
+}
 
 .widefat .wappointment-wrap  tfoot td input[type="checkbox"]::before, 
 .widefat .wappointment-wrap  th input[type="checkbox"]::before, 
